test/fail/vt_def18.v3
//@execute 0=1; 1=22; 2=0; 3=55; 4=0; 5=!BoundsCheckException
type HH {
	case One(a: int);
	case Two(x: int, y: int);
}
def d: HH;
def x = [HH.One(1), HH.Two(11, 22), HH.Two(0, 0), HH.Two(44, 55), d];
def main(a: int) -> int {
	match (x(a)) {
		One(x): return x;
		Two(x, y): return y;
	}
}
